tests/baselines/reference/constructorParametersInVariableDeclarations.errors.txt
==== tests/cases/compiler/constructorParametersInVariableDeclarations.ts (6 errors) ====
    class A {
        private a = x;
                    ~
!!! error TS2304: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! error TS2304: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! error TS2304: Cannot find name 'x'.
        constructor(x: number) {
        }
    }
    
    class B {
        private a = x;
                    ~
!!! error TS2304: Cannot find name 'x'.
        private b = { p: x };
                         ~
!!! error TS2304: Cannot find name 'x'.
        private c = () => x;
                          ~
!!! error TS2304: Cannot find name 'x'.
        constructor() {
            var x = 1;
        }
    }